# dcachefs

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
dcachefs/: __init__.py  dcachefs.py
docs/: api.rst  conf.py  index.rst
notebooks/: user_manual.ipynb
tests/: test_dcachefs.py  test_init.py  test_lint.py
